--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "awesome-react-icons": "^1.4.8",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-sidebar": "^3.0.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.13"
   }
 }
