--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.3.13",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "3.3.10",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
@@ -18,10 +20,12 @@
     "@testing-library/user-event": "^13.2.1",
     "awesome-react-icons": "^1.4.8",
     "axios": "^0.24.0",
+    "date-fns": "2.22.1",
     "formik": "^2.2.9",
     "mui-datatables": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^6.2.1",
