--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mui-datatables": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.0",
     "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-minimal-side-navigation": "^1.9.2",
