--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^5.3.0",
     "@mui/styles": "^5.3.0",
     "@mui/x-data-grid": "^5.3.0",
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
